--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,37 +1,18 @@
 ---
 import type { Props } from '@astrojs/starlight/props';
-import EditLink from '@astrojs/starlight/components/EditLink.astro';
-import LastUpdated from '@astrojs/starlight/components/LastUpdated.astro';
-import Pagination from '@astrojs/starlight/components/Pagination.astro';
+import Default from '@astrojs/starlight/components/Footer.astro';
 ---
 
-<footer>
-	<div class="meta sl-flex">
-		<EditLink {...Astro.props} />
-		<LastUpdated {...Astro.props} />
-	</div>
-    <div class="policies">
-        <a href="/policy/privacy/">Privacy Policy</a>
-    </div>    
-	<Pagination {...Astro.props} />
-</footer>
 
+<Default {...Astro.props}><slot /></Default>
 <style>
-	.meta {
-		gap: 0.75rem 3rem;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		margin-block: 3rem 1.5rem;
-		font-size: var(--sl-text-sm);
-		color: var(--sl-color-gray-3);
-	}
-	.meta > :global(p:only-child) {
-		margin-inline-start: auto;
-	}
     .policies {
         position: fixed;
         bottom: 0;
         width: 100%;
     }
 </style>
+<div class="policies">
+    <a href="/policy/privacy/">Privacy Policy</a>
+</div>
 
