--- a/src/components/general/generalYaml/GeneralYaml.astro
+++ b/src/components/general/generalYaml/GeneralYaml.astro
@@ -3,4 +3,4 @@ import {GeneralYaml as YamlGeneral} from "./index.ts";
 
 ---
 
-<YamlGeneral  client:only></YamlGeneral>
+<YamlGeneral  client:only="lit"></YamlGeneral>
