--- a/src/components/general/pairing/MonsterPairs.astro
+++ b/src/components/general/pairing/MonsterPairs.astro
@@ -171,7 +171,7 @@ if (result.success) {
 </style>
 
 <div class="sp-table-container">
-  <InvestmentSelector generalRole="primary" client:only />
-  <InvestmentSelector generalRole="secondary" client:only />
-  <PairingTable client:only />
+  <InvestmentSelector generalRole="primary" client:only="lit" />
+  <InvestmentSelector generalRole="secondary" client:only="lit" />
+  <PairingTable client:only="lit" />
 </div>
