--- a/src/components/general/pairing/Pairing.astro
+++ b/src/components/general/pairing/Pairing.astro
@@ -5,4 +5,4 @@ const dataUrl = new URL('/generals/all.json', Astro.url)
 const conflictData = new URL('/generalConflictData/conflicts.json', Astro.url)
 ---
 
-<PairingPage dataurl={dataUrl.toString()} conflictdata={conflictData.toString()} client:only></PairingPage>
+<PairingPage dataurl={dataUrl.toString()} conflictdata={conflictData.toString()} client:only="lit"></PairingPage>
