--- a/src/components/Spectrum/TopNav.astro
+++ b/src/components/Spectrum/TopNav.astro
@@ -6,4 +6,4 @@ import {SpectrumTopNav} from './TopNav';
 
 ---
 
-<SpectrumTopNav class="sl-block" client:only></SpectrumTopNav>
+<SpectrumTopNav class="sl-block" client:only="lit"></SpectrumTopNav>
