--- a/src/components/general/pairing/GroundReinPairs.astro
+++ b/src/components/general/pairing/GroundReinPairs.astro
@@ -168,7 +168,7 @@ if (result.success) {
 </style>
 
 <div class="sp-table-container">
-  <InvestmentSelector generalRole="primary" client:only />
-  <InvestmentSelector generalRole="secondary" client:only />
-  <PairingTable type={ClassEnum.enum.Ground} use={generalUseCase.enum.Defense} client:only />
+  <InvestmentSelector generalRole="primary" client:only="lit" />
+  <InvestmentSelector generalRole="secondary" client:only="lit" />
+  <PairingTable type={ClassEnum.enum.Ground} use={generalUseCase.enum.Defense} client:only="lit" />
 </div>
