--- a/src/components/general/pairing/SiegeAttackPairs.astro
+++ b/src/components/general/pairing/SiegeAttackPairs.astro
@@ -171,7 +171,7 @@ if (result.success) {
 </style>
 
 <div class="sp-table-container">
-  <InvestmentSelector generalRole="primary" client:only />
-  <InvestmentSelector generalRole="secondary" client:only />
-  <PairingTable type={ClassEnum.enum.Siege} use={generalUseCase.enum.Attack} client:only />
+  <InvestmentSelector generalRole="primary" client:only="lit" />
+  <InvestmentSelector generalRole="secondary" client:only="lit" />
+  <PairingTable type={ClassEnum.enum.Siege} use={generalUseCase.enum.Attack} client:only="lit" />
 </div>
